--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -10,18 +10,28 @@
                     <div id="o_survey_certification" t-att-data-oe-model="user_input._name"
                          t-att-data-oe-id="user_input.id"
                          t-attf-class="#{'article certification-wrapper ' + layout_template + ' ' + layout_color}">
-                        <style>
-                            .firenor-one{
-                            background-color: #ffffff !important;
-                            background: url(/fn_academy/static/img/firenor-one_seagreen.png);
-                            background-size: cover;
-                            border: 1px solid red;
-                            text-align: center;
-                            }
-                            .row{
-                            border: 1px solid blue;
-                            }
-                        </style>
+                    <style>
+                        .firenor-one{
+                        background-color: #ffffff !important;
+                        background: url(/fn_academy/static/img/firenor-one_seagreen.png);
+                        background-size: cover;
+                        border: 1px solid red;
+                        text-align: center;
+                        }
+                        .row{
+                        border: 1px solid blue;
+                        }
+                    </style>
+
+                    <div class="certification-top">
+                        <h1>
+                            <b>Certificate</b>
+                            <br/>
+                            <span t-if="user_input.scoring_success">of achievement</span>
+                        </h1>
+                    </div>
+
+                    <div class="page certification-content">
                         <div t-attf-class="#{'container h-100 justify-content-center align-items-center ' + layout_template + ' ' + layout_color}">
                             <div class="row">
                                 <div class="col-12">
@@ -29,7 +39,9 @@
                                 </div>
                             </div>
                             <div class="row">
-                                <div class="col-12"><p>This is presetned to:</p></div>
+                                <div class="col-12">
+                                    <p>This is presetned to:</p>
+                                </div>
                             </div>
                             <div class="row">
                                 <div class="col-12">
@@ -41,7 +53,8 @@
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    <p>successfully completed <t t-esc="user_input.survey_id.display_name"/>.</p>
+                                    <p>successfully completed<t t-esc="user_input.survey_id.display_name"/>.
+                                    </p>
 
                                 </div>
 
@@ -54,9 +67,26 @@
                                 <div class="col-6">Posistion 1</div>
                                 <div class="col-6">Posistion2</div>
                             </div>
-                            <p>layout_template: <t t-esc="layout_template"/></p>
-                            <p>layout_color: <t t-esc="layout_color"/></p>
                         </div>
+                    </div>
+
+                    <div class="certification-bottom">
+                        <div class="oe_structure"/>
+                        <div class="certification-date-wrapper">
+                            <span class="certification-date" t-field="user_input.create_date"
+                                  t-options='{"widget": "date"}'>2023-08-18
+                            </span>
+                            <span>Date</span>
+                        </div>
+                        <div class="certification-company">
+                            <span class="certification-company-logo" t-field="user_input.create_uid.company_id.logo"
+                                  t-options="{'widget': 'image'}" role="img"/>
+                        </div>
+                    </div>
+                    <div t-if="user_input.test_entry" class="test-entry"/>
+                    <div class="certification-number" t-if="user_input.scoring_success">
+                        Certification n°
+                        <span t-out="str(user_input.id).rjust(10, '0')">0000000010</span>
                     </div>
                 </t>
             </t>
