--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -22,71 +22,43 @@
                         border: 1px solid blue;
                         }
                     </style>
-
-                    <div class="certification-top">
-                        <h1>
-                            <b>Certificate</b>
-                            <br/>
-                            <span t-if="user_input.scoring_success">of achievement</span>
-                        </h1>
-                    </div>
-
-                    <div class="page certification-content">
-                        <div t-attf-class="#{'container h-100 justify-content-center align-items-center ' + layout_template + ' ' + layout_color}">
-                            <div class="row">
-                                <div class="col-12">
-                                    <h1>Certificate of Completion</h1>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12">
-                                    <p>This is presetned to:</p>
-                                </div>
-                            </div>
-                            <div class="row">
-                                <div class="col-12">
-                                    <h1>
-                                        <t t-esc="user_input.partner_id.name or user_input.email"/>
-                                    </h1>
-                                </div>
-
-                            </div>
-                            <div class="row">
-                                <div class="col-12">
-                                    <p>successfully completed<t t-esc="user_input.survey_id.display_name"/>.
-                                    </p>
-
-                                </div>
-
-                            </div>
-                            <div class="row">
-                                <div class="col-6">Name 1</div>
-                                <div class="col-6">Name 2</div>
-                            </div>
-                            <div class="row">
-                                <div class="col-6">Posistion 1</div>
-                                <div class="col-6">Posistion2</div>
-                            </div>
+                    <div t-attf-class="#{'container h-100 justify-content-center align-items-center ' + layout_template + ' ' + layout_color}">
+                    <div class="row">
+                        <div class="col-12">
+                            <h1>Certificate of Completion</h1>
                         </div>
                     </div>
-
-                    <div class="certification-bottom">
-                        <div class="oe_structure"/>
-                        <div class="certification-date-wrapper">
-                            <span class="certification-date" t-field="user_input.create_date"
-                                  t-options='{"widget": "date"}'>2023-08-18
-                            </span>
-                            <span>Date</span>
-                        </div>
-                        <div class="certification-company">
-                            <span class="certification-company-logo" t-field="user_input.create_uid.company_id.logo"
-                                  t-options="{'widget': 'image'}" role="img"/>
+                    <div class="row">
+                        <div class="col-12">
+                            <p>This is presetned to:</p>
                         </div>
                     </div>
-                    <div t-if="user_input.test_entry" class="test-entry"/>
-                    <div class="certification-number" t-if="user_input.scoring_success">
-                        Certification n°
-                        <span t-out="str(user_input.id).rjust(10, '0')">0000000010</span>
+                    <div class="row">
+                        <div class="col-12">
+                            <h1>
+                                <t t-esc="user_input.partner_id.name or user_input.email"/>
+                            </h1>
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col-12">
+                            <p>successfully completed<t t-esc="user_input.survey_id.display_name"/>.
+                            </p>
+
+                        </div>
+
+                    </div>
+                    <div class="row">
+                        <div class="col-6">Name 1</div>
+                        <div class="col-6">Name 2</div>
+                    </div>
+                    <div class="row">
+                        <div class="col-6">Posistion 1</div>
+                        <div class="col-6">Posistion2</div>
+                    </div>
+                    <div class="row" t-if="user_input.scoring_success">
+                        <div class="col-12">Certification n° <span t-out="str(user_input.id).rjust(10, '0')">0000000010</span> </div>
                     </div>
                 </t>
             </t>
