--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -15,22 +15,22 @@
                             background-color: #ffffff !important;
                             background: url(/fn_academy/static/img/firenor-one_seagreen.png);
                             background-size: cover;
-                            border: 1px solid red;
                             text-align: center;
-                            }
-                            .row{
-                            border: 1px solid blue;
                             }
                         </style>
                         <div t-attf-class="#{'container h-100 justify-content-center align-items-center ' + layout_template + ' ' + layout_color}">
                             <div class="row">
                                 <div class="col-12">
-                                    <h1>Certificate of Completion</h1>
+                                    <h1>
+                                        <b>Certificate</b>
+                                        <br/>
+                                        <span t-if="user_input.scoring_success">of achievement</span>
+                                    </h1>
                                 </div>
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    <p>This is presetned to:</p>
+                                    <p>This certificate is presented to</p>
                                 </div>
                             </div>
                             <div class="row">
@@ -59,7 +59,7 @@
                             </div>
                             <div class="row" t-if="user_input.scoring_success">
                                 <div class="col-12">Certification n°
-                                    <span t-out="str(user_input.id).rjust(10, '0')"/>
+                                    <span t-out="str('FN')+str(user_input.id).rjust(10, '0')"/>
                                 </div>
                             </div>
                         </div>
