--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -22,7 +22,8 @@
                             <div class="row">
                                 <div class="col-12">
                                     <h1>
-                                        Certificate <span t-if="user_input.scoring_success">of achievement</span>
+                                        Certificate
+                                        <span t-if="user_input.scoring_success">of achievement</span>
                                     </h1>
                                 </div>
                             </div>
@@ -41,8 +42,18 @@
                             </div>
                             <div class="row">
                                 <div class="col-12">
-                                    <p t-if="user_input.scoring_success">successfully completed <t t-esc="user_input.survey_id.display_name"/>. </p>
-                                    <p t-else=" ">for taking the <t t-esc="user_input.survey_id.display_name"/> course.</p>
+                                    <p t-if="user_input.scoring_success">For successfully completing<t
+                                            t-esc="user_input.survey_id.display_name"/>. Your dedication, perseverance,
+                                        and hard work have not only earned you this certification but also reflect your
+                                        commitment to excellence. Your efforts have made a meaningful impact, and we are
+                                        incredibly proud of your achievement. This accomplishment demonstrates your
+                                        ability to rise to challenges and excel, and we look forward to witnessing your
+                                        continued success in future endeavors.
+                                    </p>
+                                    <p t-else=" ">for taking the
+                                        <t t-esc="user_input.survey_id.display_name"/>
+                                        course.
+                                    </p>
                                 </div>
                             </div>
                             <div class="row">
