--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -19,7 +19,7 @@
                             }
                         </style>
                         <div t-attf-class="#{'container h-100 justify-content-center align-items-center ' + layout_template + ' ' + layout_color}">
-                            <div class="row">
+                            <div class="row mt-5">
                                 <div class="col-12">
                                     <h1>
                                         Certificate
@@ -40,10 +40,10 @@
                                 </div>
 
                             </div>
-                            <div class="row">
+                            <div class="row px-3">
                                 <div class="col-12 px-5">
-                                    <p t-if="user_input.scoring_success">For successfully completing<t
-                                            t-esc="user_input.survey_id.display_name"/>. Your dedication, perseverance,
+                                    <p class="mx-3" t-if="user_input.scoring_success">For successfully completing
+                                        <em><t t-esc="user_input.survey_id.display_name"/></em>. Your dedication, perseverance,
                                         and hard work have not only earned you this certification but also reflect your
                                         commitment to excellence. Your efforts have made a meaningful impact, and we are
                                         incredibly proud of your achievement. This accomplishment demonstrates your
