--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -19,9 +19,9 @@
                             }
                         </style>
                         <div t-attf-class="#{'container h-100 justify-content-center align-items-center ' + layout_template + ' ' + layout_color}">
-                            <div class="row mt-5">
-                                <div class="col-12">
-                                    <h1>
+                            <div class="row pt-5 ">
+                                <div class="col-12 mt-5">
+                                    <h1 class="mt-5 pt-5">
                                         Certificate
                                         <span t-if="user_input.scoring_success">of achievement</span>
                                     </h1>
@@ -40,9 +40,9 @@
                                 </div>
 
                             </div>
-                            <div class="row px-3">
+                            <div class="row px-4">
                                 <div class="col-12 px-5">
-                                    <p class="mx-3" t-if="user_input.scoring_success">For successfully completing
+                                    <p class="mx-4" t-if="user_input.scoring_success">For successfully completing
                                         <em><t t-esc="user_input.survey_id.display_name"/></em>. Your dedication, perseverance,
                                         and hard work have not only earned you this certification but also reflect your
                                         commitment to excellence. Your efforts have made a meaningful impact, and we are
