--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -19,7 +19,7 @@
                             }
                         </style>
                         <div t-attf-class="#{'container h-100 justify-content-center align-items-center ' + layout_template + ' ' + layout_color}">
-                            <div class="row pt-5 ">
+                            <div class="row pt-5">
                                 <div class="col-12 mt-5">
                                     <h1 class="mt-5 pt-5">
                                         Certificate
@@ -27,12 +27,12 @@
                                     </h1>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-12">
-                                    <p>This certificate is presented to</p>
+                            <div class="row pt-5">
+                                <div class="col-12  mt-5">
+                                    <p class="mt-5 pt-5">This certificate is presented to</p>
                                 </div>
                             </div>
-                            <div class="row">
+                            <div class="row mb-2">
                                 <div class="col-12">
                                     <h1>
                                         <t t-esc="user_input.partner_id.name or user_input.email"/>
