--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -40,7 +40,7 @@
                                 </div>
 
                             </div>
-                            <div class="row px-5 mb-5">
+                            <div class="row px-5 mx-5">
                                 <div class="col-12 px-5">
                                     <p class="mx-5" t-if="user_input.scoring_success">For successfully completing
                                         <em><t t-esc="user_input.survey_id.display_name"/></em>.<br/>Your dedication, perseverance,
@@ -54,7 +54,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="row mt-5">
+                            <div class="row mt-5 m-5">
                                 <div class="col-6">Name 1</div>
                                 <div class="col-6">Name 2</div>
                             </div>
