--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -41,7 +41,7 @@
 
                             </div>
                             <div class="row px-5 mx-5">
-                                <div class="col-12 px-5">
+                                <div class="col-12 px-5 mx-5">
                                     <p class="mx-5" t-if="user_input.scoring_success">For successfully completing
                                         <em><t t-esc="user_input.survey_id.display_name"/></em>.<br/>Your dedication, perseverance,
                                         and hard work have not only earned you this certification but also reflect your
@@ -63,7 +63,7 @@
                                 <div class="col-6">Posistion 2</div>
                             </div>
                             <div class="row mt-2" t-if="user_input.scoring_success">
-                                <div class="col-12">Certification n°
+                                <div class="col-12" >Certification n°
                                     <span t-out="str('FNA')+str(user_input.id).rjust(10, '0')"/>
                                 </div>
                             </div>
