--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -54,7 +54,7 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="row mt-5 m-5">
+                            <div class="row mt-5 mt-5 pt-5">
                                 <div class="col-6">Name 1</div>
                                 <div class="col-6">Name 2</div>
                             </div>
