--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -19,9 +19,9 @@
                             }
                         </style>
                         <div t-attf-class="#{'container h-100 justify-content-center align-items-center ' + layout_template + ' ' + layout_color}">
-                            <div class="row mb-4 pt-1">
-                                <div class="col-12 mt-5 py-1">
-                                    <h1 class="mt-5 pt-5">
+                            <div class="row my-1 py-1">
+                                <div class="col-12 my-1 py-1">
+                                    <h1 class="my-1 py-1">
                                         Certificate <span t-if="user_input.scoring_success">of Achievement</span>
                                     </h1>
                                 </div>
