--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -17,12 +17,31 @@
                             background-size: cover;
                             text-align: center;
                             }
+
+                            .a4-page {
+                            height: 210mm; /* Width in mm */
+                            width: 297mm; /* Height in mm */
+                            margin: 0px;
+                            padding: 0px;
+                            align-items: center;
+                            justify-content: center;
+                            text-align: center;
+                            }
+                            /* Optional: Make sure it looks good for print */
+                            @media print {
+                            .a4-page {
+                            margin: 0;
+                            border: none;
+                            page-break-after: always;
+                            }
+                            }
                         </style>
-                        <div t-attf-class="#{'container h-100 justify-content-center align-items-center ' + layout_template + ' ' + layout_color}">
+                        <div t-attf-class="#{'container h-100 justify-content-center align-items-center a4-page' + layout_template + ' ' + layout_color}">
                             <div class="row mt-5 pt-5">
                                 <div class="col-12 mt-5 pt-5">
                                     <h1 class="my-1 py-1">
-                                        Certificate <span t-if="user_input.scoring_success">of Achievement</span>
+                                        Certificate
+                                        <span t-if="user_input.scoring_success">of Achievement</span>
                                     </h1>
                                 </div>
                             </div>
@@ -42,14 +61,21 @@
                             <div class="row px-5 mx-5 mt-4">
                                 <div class="col-12 px-5 my-2">
                                     <p class="mx-4" t-if="user_input.scoring_success">For successfully completing
-                                        <em><t t-esc="user_input.survey_id.display_name"/></em>.<br/>Your dedication, perseverance,
+                                        <em>
+                                            <t t-esc="user_input.survey_id.display_name"/>
+                                        </em>
+                                        .<br/>Your dedication, perseverance,
                                         and hard work have not only earned you this certification but also reflect your
                                         commitment to excellence. Your efforts have made a meaningful impact, and we are
                                         incredibly proud of your achievement. This accomplishment demonstrates your
                                         ability to rise to challenges and excel, and we look forward to witnessing your
                                         continued success in future endeavors.
                                     </p>
-                                    <p  class="mx-4" t-else=" ">for taking the <em><t t-esc="user_input.survey_id.display_name"/></em> course.
+                                    <p class="mx-4" t-else=" ">for taking the
+                                        <em>
+                                            <t t-esc="user_input.survey_id.display_name"/>
+                                        </em>
+                                        course.
                                     </p>
                                 </div>
                             </div>
@@ -62,7 +88,7 @@
                                 <div class="col-6">Position 2</div>
                             </div>
                             <div class="row mt-2" t-if="user_input.scoring_success">
-                                <div class="col-12" >Certification n°
+                                <div class="col-12">Certification n°
                                     <span t-out="str('FNA')+str(user_input.id).rjust(10, '0')"/>
                                 </div>
                             </div>
