--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -61,16 +61,16 @@
                                     </p>
                                 </div>
                             </div>
-                            <div class="row mt-1 pt-1">
+                            <div class="row mt-2 pt-1">
                                 <div class="col-6">Name 1</div>
                                 <div class="col-6">Name 2</div>
                             </div>
-                            <div class="row mb-1 pb-1">
+                            <div class="row my-1 pb-1">
                                 <div class="col-6">Position 1</div>
                                 <div class="col-6">Position 2</div>
                             </div>
                             <div class="row my-1 py-1" t-if="user_input.scoring_success">
-                                <div class="col-12" style="text-align: right !important;">Certification n°
+                                <div class="col-12 p-5" style="text-align: right !important;">Certification n°
                                     <span t-out="str('FNA')+str(user_input.id).rjust(10, '0')"/>
                                 </div>
                             </div>
