--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -19,7 +19,7 @@
                             }
                         </style>
                         <div t-attf-class="#{'container h-100 justify-content-center align-items-center' + layout_template + ' ' + layout_color}">
-                            <div class="row mt-5 pt-4">
+                            <div class="row mt-5 pt-4 mb-2">
                                 <div class="col-12 mt-5 pt-5">
                                     <h1 class="my-1 py-1">
                                         Certificate
