--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -40,7 +40,7 @@
                                 </div>
 
                             </div>
-                            <div class="row px-5 mx-5 mt-4">
+                            <div class="row px-5 mx-5 mt-5">
                                 <div class="col-12 px-5 my-1">
                                     <p class="mx-2" t-if="user_input.scoring_success">For successfully completing
                                         <em>
@@ -62,16 +62,16 @@
                                 </div>
                             </div>
 
-                            <div class="row my-0 py-1" t-if="user_input.scoring_success">
+                            <div class="row my-0 py-2" t-if="user_input.scoring_success">
                                 <div class="col-12 p-5 m-4" style="text-align: right !important;">Certification n°
                                     <span t-out="str('FNA')+str(user_input.id).rjust(10, '0')"/>
                                 </div>
                             </div>
-                            <div class="row">
+                            <!--<div class="row">
                                 <div class="col-12">
                                     <br/>
                                 </div>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                 </t>
