--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -62,8 +62,8 @@
                                 </div>
                             </div>
 
-                            <div class="row my-0 py-2" t-if="user_input.scoring_success">
-                                <div class="col-12 p-5 m-4" style="text-align: right !important;">Certification n°
+                            <div class="row my-1 py-2" t-if="user_input.scoring_success" style="border: 1px solid blue;">
+                                <div class="col-12 p-5 m-5" style="text-align: right !important; border: 1px solid red;">Certification n°
                                     <span t-out="str('FNA')+str(user_input.id).rjust(10, '0')"/>
                                 </div>
                             </div>
