--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -62,7 +62,7 @@
                                 </div>
                             </div>
 
-                            <div class="row my-2 py-2" t-if="user_input.scoring_success" style="border: 1px solid blue;">
+                            <div class="row m-5 p-5" t-if="user_input.scoring_success" style="border: 1px solid blue;">
                                 <div class="col-12" style="text-align: right !important; border: 1px solid red;">Certification n°
                                     <span t-out="str('FNA')+str(user_input.id).rjust(10, '0')"/>
                                 </div>
