--- a/report/custom_survey_template.xml
+++ b/report/custom_survey_template.xml
@@ -73,8 +73,10 @@
                             </div>
 
                             <div class="row m-5 p-4" t-if="user_input.scoring_success">
-                                <div class="col-12 mt-3 pt-3" style="text-align: right">Certification n°
-                                    <span t-out="str('FNA')+str(user_input.id).rjust(10, '0')"/>
+                                <div class="col-12 mt-3 pt-3" style="text-align: right">
+                                    <p style="border-top: 3px solid white !important;">Certification n°
+                                        <span t-out="str('FNA')+str(user_input.id).rjust(10, '0')"/>
+                                    </p>
                                 </div>
                             </div>
                         </div>
