--- a/report/custom_survey_reports.xml
+++ b/report/custom_survey_reports.xml
@@ -10,7 +10,7 @@
             <field name="report_file">survey.certification_report_view</field>
             <field name="print_report_name">'Certification - %s' % (object.cert_name)</field>
             <!--<field name="attachment">'certification.pdf'</field>-->
-            <field name="binding_model_id" ref="model_survey_user_input"/>
+            <!--<field name="binding_model_id" ref="model_survey_user_input"/>-->
             <field name="binding_type">report</field>
             <field name="paperformat_id" ref="paperformat_survey_certification"/>
         </record>
